@@ -2,7 +2,6 @@ package no.nav.bidrag.beregn.bpsandelsaertilskudd.periode;
 
 import static java.util.Comparator.comparing;
 import static java.util.stream.Collectors.toCollection;
-import static java.util.stream.Collectors.toList;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -20,22 +19,18 @@ import no.nav.bidrag.beregn.felles.PeriodeUtil;
 import no.nav.bidrag.beregn.felles.bo.Avvik;
 import no.nav.bidrag.beregn.felles.bo.Periode;
 import no.nav.bidrag.beregn.felles.bo.SjablonPeriode;
-import no.nav.bidrag.beregn.felles.enums.Rolle;
-import no.nav.bidrag.beregn.felles.enums.SoknadType;
 import no.nav.bidrag.beregn.felles.inntekt.InntektPeriodeGrunnlag;
 import no.nav.bidrag.beregn.felles.periode.Periodiserer;
 
 public class BPsAndelSaertilskuddPeriodeImpl implements BPsAndelSaertilskuddPeriode {
 
-  public BPsAndelSaertilskuddPeriodeImpl(
-      BPsAndelSaertilskuddBeregning bPsAndelSaertilskuddBeregning) {
+  public BPsAndelSaertilskuddPeriodeImpl(BPsAndelSaertilskuddBeregning bPsAndelSaertilskuddBeregning) {
     this.bPsAndelSaertilskuddBeregning = bPsAndelSaertilskuddBeregning;
   }
 
-  private BPsAndelSaertilskuddBeregning bPsAndelSaertilskuddBeregning;
+  private final BPsAndelSaertilskuddBeregning bPsAndelSaertilskuddBeregning;
 
-  public BeregnBPsAndelSaertilskuddResultat beregnPerioder(
-      BeregnBPsAndelSaertilskuddGrunnlag beregnBPsAndelSaertilskuddGrunnlag) {
+  public BeregnBPsAndelSaertilskuddResultat beregnPerioder(BeregnBPsAndelSaertilskuddGrunnlag beregnBPsAndelSaertilskuddGrunnlag) {
 
     var resultatPeriodeListe = new ArrayList<ResultatPeriode>();
 
@@ -51,18 +46,18 @@ public class BPsAndelSaertilskuddPeriodeImpl implements BPsAndelSaertilskuddPeri
         .map(NettoSaertilskuddPeriode::new)
         .collect(toCollection(ArrayList::new));
 
-    var justertInntektBPPeriodeListe = justerInntekter(beregnBPsAndelSaertilskuddGrunnlag.getInntektBPPeriodeListe())
+    var justertInntektBPPeriodeListe = beregnBPsAndelSaertilskuddGrunnlag.getInntektBPPeriodeListe()
         .stream()
         .map(InntektPeriode::new)
         .collect(toCollection(ArrayList::new));
 
-    var justertInntektBMPeriodeListe = behandlUtvidetBarnetrygd(justerInntekter(beregnBPsAndelSaertilskuddGrunnlag.getInntektBMPeriodeListe()),
+    var justertInntektBMPeriodeListe = behandlUtvidetBarnetrygd(beregnBPsAndelSaertilskuddGrunnlag.getInntektBMPeriodeListe(),
         justertSjablonPeriodeListe)
         .stream()
         .map(InntektPeriode::new)
         .collect(toCollection(ArrayList::new));
 
-    var justertInntektBBPeriodeListe = justerInntekter(beregnBPsAndelSaertilskuddGrunnlag.getInntektBBPeriodeListe())
+    var justertInntektBBPeriodeListe = beregnBPsAndelSaertilskuddGrunnlag.getInntektBBPeriodeListe()
         .stream()
         .map(InntektPeriode::new)
         .collect(toCollection(ArrayList::new));
@@ -84,72 +79,59 @@ public class BPsAndelSaertilskuddPeriodeImpl implements BPsAndelSaertilskuddPeri
         .finnPerioder(beregnBPsAndelSaertilskuddGrunnlag.getBeregnDatoFra(), beregnBPsAndelSaertilskuddGrunnlag.getBeregnDatoTil());
 
     // Hvis det ligger 2 perioder på slutten som i til-dato inneholder hhv. beregningsperiodens til-dato og null slås de sammen
-    if (perioder.size() > 1) {
-      if ((perioder.get(perioder.size() - 2).getDatoTil().equals(beregnBPsAndelSaertilskuddGrunnlag.getBeregnDatoTil())) &&
-          (perioder.get(perioder.size() - 1).getDatoTil() == null)) {
-        var nyPeriode = new Periode(perioder.get(perioder.size() - 2).getDatoFom(), null);
-        perioder.remove(perioder.size() - 1);
-        perioder.remove(perioder.size() - 1);
-        perioder.add(nyPeriode);
-      }
+    if ((perioder.size() > 1) &&
+        (perioder.get(perioder.size() - 2).getDatoTil().equals(beregnBPsAndelSaertilskuddGrunnlag.getBeregnDatoTil())) &&
+        (perioder.get(perioder.size() - 1).getDatoTil() == null)) {
+      var nyPeriode = new Periode(perioder.get(perioder.size() - 2).getDatoFom(), null);
+      perioder.remove(perioder.size() - 1);
+      perioder.remove(perioder.size() - 1);
+      perioder.add(nyPeriode);
     }
 
     // Løper gjennom periodene og finner matchende verdi for hver kategori. Kaller beregningsmodulen for hver beregningsperiode
     for (Periode beregningsperiode : perioder) {
 
-      var nettoSaertilskuddBelop = justertNettoSaertilskuddPeriodeListe.stream().filter(
-              i -> i.getPeriode().overlapperMed(beregningsperiode))
-          .map(NettoSaertilskuddPeriode::getNettoSaertilskuddBelop).findFirst().orElse(null);
+      var nettoSaertilskuddBelop = justertNettoSaertilskuddPeriodeListe.stream()
+          .filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
+          .map(NettoSaertilskuddPeriode::getNettoSaertilskuddBelop)
+          .findFirst()
+          .orElseThrow(
+              () -> new IllegalArgumentException("Grunnlagsobjekt NETTO_SAERTILSKUDD mangler data for periode: " + beregningsperiode.getPeriode()));
 
-      var inntektBP = justertInntektBPPeriodeListe.stream().filter(
-              i -> i.getPeriode().overlapperMed(beregningsperiode))
-          .map(inntektPeriode -> new Inntekt(inntektPeriode.getReferanse(), inntektPeriode.getInntektType(),
-              inntektPeriode.getInntektBelop(), false, false)).collect(toList());
+      var inntektBP = justertInntektBPPeriodeListe.stream()
+          .filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
+          .map(inntektPeriode -> new Inntekt(inntektPeriode.getReferanse(), inntektPeriode.getInntektType(), inntektPeriode.getInntektBelop(), false,
+              false))
+          .toList();
 
-      var inntektBM = justertInntektBMPeriodeListe.stream().filter(
-              i -> i.getPeriode().overlapperMed(beregningsperiode))
-          .map(inntektPeriode -> new Inntekt(inntektPeriode.getReferanse(), inntektPeriode.getInntektType(),
-              inntektPeriode.getInntektBelop(), false, false)).collect(toList());
+      var inntektBM = justertInntektBMPeriodeListe.stream()
+          .filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
+          .map(inntektPeriode -> new Inntekt(inntektPeriode.getReferanse(), inntektPeriode.getInntektType(), inntektPeriode.getInntektBelop(), false,
+              false))
+          .toList();
 
-      var inntektBB = justertInntektBBPeriodeListe.stream().filter(
-              i -> i.getPeriode().overlapperMed(beregningsperiode))
-          .map(inntektPeriode -> new Inntekt(inntektPeriode.getReferanse(), inntektPeriode.getInntektType(),
-              inntektPeriode.getInntektBelop(), false, false)).collect(toList());
+      var inntektBB = justertInntektBBPeriodeListe.stream()
+          .filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
+          .map(inntektPeriode -> new Inntekt(inntektPeriode.getReferanse(), inntektPeriode.getInntektType(), inntektPeriode.getInntektBelop(), false,
+              false))
+          .toList();
 
-      var sjablonliste = justertSjablonPeriodeListe.stream().filter(
-          i -> i.getPeriode().overlapperMed(beregningsperiode)).collect(toList());
+      var sjablonliste = justertSjablonPeriodeListe.stream()
+          .filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
+          .toList();
 
       // Kaller beregningsmodulen for hver beregningsperiode
-      var beregnBPsAndelSaertilskuddGrunnlagPeriodisert = new GrunnlagBeregning(nettoSaertilskuddBelop,
-          inntektBP, inntektBM, inntektBB, sjablonliste);
+      var beregnBPsAndelSaertilskuddGrunnlagPeriodisert = new GrunnlagBeregning(nettoSaertilskuddBelop, inntektBP, inntektBM, inntektBB,
+          sjablonliste);
 
       // Beregner
-      resultatPeriodeListe.add(new ResultatPeriode(
-          beregningsperiode, bPsAndelSaertilskuddBeregning.beregn(beregnBPsAndelSaertilskuddGrunnlagPeriodisert),
-          beregnBPsAndelSaertilskuddGrunnlagPeriodisert));
+      resultatPeriodeListe.add(
+          new ResultatPeriode(beregningsperiode, bPsAndelSaertilskuddBeregning.beregn(beregnBPsAndelSaertilskuddGrunnlagPeriodisert),
+              beregnBPsAndelSaertilskuddGrunnlagPeriodisert));
     }
 
-    //Slår sammen perioder med samme resultat
+    // Slår sammen perioder med samme resultat
     return new BeregnBPsAndelSaertilskuddResultat(resultatPeriodeListe);
-  }
-
-  // Justerer inntekter basert på regler definert i InntektUtil (bidrag-beregn-felles)
-  private List<InntektPeriode> justerInntekter(List<InntektPeriode> inntektPeriodeListe) {
-
-    if (inntektPeriodeListe.isEmpty()) {
-      return inntektPeriodeListe;
-    }
-
-    var justertInntektPeriodeListe = InntektUtil.justerInntekter(inntektPeriodeListe.stream()
-        .map(inntektPeriode -> new InntektPeriodeGrunnlag(inntektPeriode.getReferanse(), inntektPeriode.getPeriode(), inntektPeriode.getInntektType(),
-            inntektPeriode.getInntektBelop(), inntektPeriode.getDeltFordel(), inntektPeriode.getSkatteklasse2()))
-        .collect(toList()));
-
-    return justertInntektPeriodeListe.stream()
-        .map(inntektGrunnlag -> new InntektPeriode(inntektGrunnlag.getReferanse(), inntektGrunnlag.getPeriode(), inntektGrunnlag.getType(),
-            inntektGrunnlag.getBelop(), false, false))
-        .sorted(comparing(inntektPeriode -> inntektPeriode.getPeriodeDatoFraTil().getDatoFom()))
-        .collect(toList());
   }
 
   // Sjekker om det skal legges til inntekt for fordel særfradrag enslig forsørger og skatteklasse 2 (kun BM)
@@ -160,15 +142,16 @@ public class BPsAndelSaertilskuddPeriodeImpl implements BPsAndelSaertilskuddPeri
     }
 
     var justertInntektPeriodeListe = InntektUtil.behandlUtvidetBarnetrygd(inntektPeriodeListe.stream()
-        .map(inntektPeriode -> new InntektPeriodeGrunnlag(inntektPeriode.getReferanse(), inntektPeriode.getPeriode(), inntektPeriode.getInntektType(),
-            inntektPeriode.getInntektBelop(), inntektPeriode.getDeltFordel(), inntektPeriode.getSkatteklasse2()))
-        .collect(toList()), sjablonPeriodeListe);
+            .map(inntektPeriode -> new InntektPeriodeGrunnlag(inntektPeriode.getReferanse(), inntektPeriode.getPeriode(), inntektPeriode.getInntektType(),
+                inntektPeriode.getInntektBelop(), inntektPeriode.getDeltFordel(), inntektPeriode.getSkatteklasse2()))
+            .toList(),
+        sjablonPeriodeListe);
 
     return justertInntektPeriodeListe.stream()
         .map(inntektGrunnlag -> new InntektPeriode(inntektGrunnlag.getReferanse(), inntektGrunnlag.getPeriode(), inntektGrunnlag.getType(),
             inntektGrunnlag.getBelop(), inntektGrunnlag.getDeltFordel(), inntektGrunnlag.getSkatteklasse2()))
         .sorted(comparing(inntektPeriode -> inntektPeriode.getPeriodeDatoFraTil().getDatoFom()))
-        .collect(toList());
+        .toList();
   }
 
   // Validerer at input-verdier til BPsAndelSaertilskuddsberegning er gyldige
@@ -205,29 +188,7 @@ public class BPsAndelSaertilskuddPeriodeImpl implements BPsAndelSaertilskuddPeri
       inntektBBPeriodeListe.add(inntektBBPeriode.getPeriode());
     }
     avvikListe.addAll(PeriodeUtil.validerInputDatoer(grunnlag.getBeregnDatoFra(), grunnlag.getBeregnDatoTil(), "inntektBBPeriodeListe",
-        inntektBPPeriodeListe, false, true, false, true));
-
-    // Valider inntekter BP
-    var inntektGrunnlagListe = grunnlag.getInntektBPPeriodeListe().stream()
-        .map(inntektPeriode -> new InntektPeriodeGrunnlag(inntektPeriode.getReferanse(), inntektPeriode.getPeriode(), inntektPeriode.getInntektType(),
-            inntektPeriode.getInntektBelop(), inntektPeriode.getDeltFordel(), inntektPeriode.getSkatteklasse2()))
-        .collect(toList());
-    avvikListe.addAll(InntektUtil.validerInntekter(inntektGrunnlagListe, SoknadType.BIDRAG, Rolle.BIDRAGSPLIKTIG));
-
-    // Valider inntekter BM
-    inntektGrunnlagListe = grunnlag.getInntektBMPeriodeListe().stream()
-        .map(inntektPeriode -> new InntektPeriodeGrunnlag(inntektPeriode.getReferanse(), inntektPeriode.getPeriode(), inntektPeriode.getInntektType(),
-            inntektPeriode.getInntektBelop(), inntektPeriode.getDeltFordel(), inntektPeriode.getSkatteklasse2()))
-        .collect(toList());
-    avvikListe.addAll(InntektUtil.validerInntekter(inntektGrunnlagListe, SoknadType.BIDRAG, Rolle.BIDRAGSMOTTAKER));
-
-    // Valider inntekter BB
-    inntektGrunnlagListe = grunnlag.getInntektBBPeriodeListe().stream()
-        .map(inntektPeriode -> new InntektPeriodeGrunnlag(inntektPeriode.getReferanse(), inntektPeriode.getPeriodeDatoFraTil(),
-            inntektPeriode.getInntektType(),
-            inntektPeriode.getInntektBelop(), inntektPeriode.getDeltFordel(), inntektPeriode.getSkatteklasse2()))
-        .collect(toList());
-    avvikListe.addAll(InntektUtil.validerInntekter(inntektGrunnlagListe, SoknadType.BIDRAG, Rolle.SOKNADSBARN));
+        inntektBBPeriodeListe, false, true, false, true));
 
     return avvikListe;
   }
